Fixing spacing on header links

--- a/src/containers/App/index.css
+++ b/src/containers/App/index.css
@@ -18,15 +18,14 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-size: calc(4px + 2vmin);
   padding: 2vh 2vh 2vh 2vh;
 }
 
 #navLinks {
   display: flex;
-
-  justify-content: space-between;
-  width: 30vh;
+  justify-content: space-around;
+  width: 20vh;
+  padding-right: 2vh;
 }
 
 /* #logo {
